# gnn-gym

./: README.md  __init__.py  pyproject.toml
gnn_gym/: __init__.py  utils.py
gnn_gym/datasets/: __init__.py  karate.py
gnn_gym/nn/: gcn.py
gnn_gym/test_cases/: __init__.py  gcn.py  simple_graph.py  utils.py
nn/: __init__.py  gcn.py
